--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,4 +21,12 @@
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
+    <filter>
+        <filter-name>CORS</filter-name> 
+        <filter-class>ues.edu.sv.ingenieria.acc.sistemaMantenimiento.servicios.service.CorsFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CORS</filter-name>
+        <url-pattern>/servicios/*</url-pattern>
+    </filter-mapping>    
 </web-app>
